--- a/server/static/index.html
+++ b/server/static/index.html
@@ -21,8 +21,8 @@
     <br>
     $ play in the terminal<br>
     <br>
-    Real-time multiplayer game<br>
-    you can play between prompts<br>
+    Hub for turn-based multiplayer games<br>
+    you can play in the terminal<br>
     <br>
     <br>
     $ ssh key authentication<br>
@@ -43,7 +43,7 @@
     you use it's a feature<br>
     <br>
     <br>
-    $ curl -s https://battld.dev/install.sh | sh<br>
+    $ curl -s https://battld.curzel.it/install.sh | sh<br>
     <br>
     Just kidding, <br>
     that's not even the correct domain <br>
