--- a/server/static/index.html
+++ b/server/static/index.html
@@ -63,7 +63,7 @@
 ░█▀▄░█▀█░░█░░░█░░█░░░█░█
 ░▀▀░░▀░▀░░▀░░░▀░░▀▀▀░▀▀░
 </pre>
-    <p>Battld is a hub of for turn-based multiplayer games you can play in the terminal.</p>
+    <p>Battld is a hub for turn-based multiplayer games you can play in the terminal.</p>
     <h2>Run the client</h2>
     <p>You&#x27;ll need rust, cargo, etc, then:</p>
     <pre>
@@ -77,6 +77,7 @@ cargo run --bin client
     <h2>Games</h2>
     <h3>Coming Soon</h3>
     <ul>
+        <li>Briscola</li>
         <li>5-Cards poker</li>
         <li>Something something Tower Defense</li>
         <li>If you have ideas please send them over!</li>
