Updated readme and index

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -77,11 +77,33 @@ cargo run --bin client
     <h2>Games</h2>
     <h3>Coming Soon</h3>
     <ul>
-        <li>Briscola</li>
         <li>5-Cards poker</li>
         <li>Something something Tower Defense</li>
         <li>If you have ideas please send them over!</li>
     </ul>
+    <h3>Briscola</h3>
+    <pre>
+
+  Briscola:   Deck:          Opponent played:   
+  ╭───────╮                  ╭───────╮
+  │     K │   33             │     A │
+  │╰─┼─╮S │   cards          │       │
+  │ ╭┴╮   │   left           │   S   │
+  │ │ │   │                  │       │
+  ╰───────╯                  ╰───────╯
+
+  Your hand:
+  ╭───────╮  ╭───────╮  ╭───────╮  
+  │     4 │  │     2 │  │     7 │  
+  │  S S  │  │       │  │  D D  │  
+  │       │  │  C C  │  │ D D D │  
+  │  S S  │  │       │  │  D D  │  
+  ╰───────╯  ╰───────╯  ╰───────╯  
+     [0]        [1]        [2]        
+
+  Your turn! Enter card index:
+  > 
+    </pre>
     <h3>Tic-Tac-Toe</h3>
     <pre>
 ==================================================
