--- a/server/static/index.html
+++ b/server/static/index.html
@@ -63,7 +63,7 @@
 ░█▀▄░█▀█░░█░░░█░░█░░░█░█
 ░▀▀░░▀░▀░░▀░░░▀░░▀▀▀░▀▀░
 </pre>
-    <p>Battld is a hub of for turn-based multiplayer games you can play in the terminal.</p>
+    <p>Battld is a hub for turn-based multiplayer games you can play in the terminal.</p>
     <h2>Run the client</h2>
     <p>You&#x27;ll need rust, cargo, etc, then:</p>
     <pre>
@@ -81,6 +81,29 @@ cargo run --bin client
         <li>Something something Tower Defense</li>
         <li>If you have ideas please send them over!</li>
     </ul>
+    <h3>Briscola</h3>
+    <pre>
+
+  Briscola:   Deck:          Opponent played:   
+  ╭───────╮                  ╭───────╮
+  │     K │   33             │     A │
+  │╰─┼─╮S │   cards          │       │
+  │ ╭┴╮   │   left           │   S   │
+  │ │ │   │                  │       │
+  ╰───────╯                  ╰───────╯
+
+  Your hand:
+  ╭───────╮  ╭───────╮  ╭───────╮  
+  │     4 │  │     2 │  │     7 │  
+  │  S S  │  │       │  │  D D  │  
+  │       │  │  C C  │  │ D D D │  
+  │  S S  │  │       │  │  D D  │  
+  ╰───────╯  ╰───────╯  ╰───────╯  
+     [0]        [1]        [2]        
+
+  Your turn! Enter card index:
+  > 
+    </pre>
     <h3>Tic-Tac-Toe</h3>
     <pre>
 ==================================================
