Disconnection time is now in game config, allowing for long-running gameplays

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -75,12 +75,7 @@ cargo run --bin client
         <img class="cta" src="/static/github_badge.webp" />
     </a>
     <h2>Games</h2>
-    <h3>Coming Soon</h3>
-    <ul>
-        <li>5-Cards poker</li>
-        <li>Something something Tower Defense</li>
-        <li>If you have ideas please send them over!</li>
-    </ul>
+    If you have ideas please send them over!
     <h3>Briscola</h3>
     <pre>
 
